httpserver/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: httpserver
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
